@@ -19,6 +19,7 @@ package com.facebook.buck.cxx;
 import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.not;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertThat;
 
@@ -31,13 +32,10 @@ import com.facebook.buck.cxx.toolchain.Preprocessor;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.rules.BuildContext;
 import com.facebook.buck.rules.BuildRuleParams;
-import com.facebook.buck.rules.CellPathResolver;
 import com.facebook.buck.rules.CommandTool;
 import com.facebook.buck.rules.DefaultSourcePathResolver;
 import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
-import com.facebook.buck.rules.FakeBuildContext;
 import com.facebook.buck.rules.FakeSourcePath;
 import com.facebook.buck.rules.HashedFileTool;
 import com.facebook.buck.rules.PathSourcePath;
@@ -49,12 +47,11 @@ import com.facebook.buck.rules.SourcePathResolver;
 import com.facebook.buck.rules.SourcePathRuleFinder;
 import com.facebook.buck.rules.TargetGraph;
 import com.facebook.buck.rules.TestBuildRuleParams;
-import com.facebook.buck.rules.TestCellPathResolver;
 import com.facebook.buck.rules.Tool;
 import com.facebook.buck.rules.args.RuleKeyAppendableFunction;
 import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.rules.coercer.FrameworkPath;
-import com.facebook.buck.rules.keys.DefaultRuleKeyFactory;
+import com.facebook.buck.rules.keys.TestDefaultRuleKeyFactory;
 import com.facebook.buck.testutil.FakeFileHashCache;
 import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.google.common.base.Strings;
@@ -66,18 +63,11 @@ import java.util.Optional;
 import org.junit.Test;
 
 public class CxxPreprocessAndCompileTest {
-
   private static class PreprocessorWithColorSupport extends GccPreprocessor {
-
     static final String COLOR_FLAG = "-use-color-in-preprocessor";
 
     public PreprocessorWithColorSupport(Tool tool) {
       super(tool);
-    }
-
-    @Override
-    public Optional<ImmutableList<String>> getFlagsForColorDiagnostics() {
-      return Optional.of(ImmutableList.of(COLOR_FLAG));
     }
   }
 
@@ -95,14 +85,6 @@ public class CxxPreprocessAndCompileTest {
     }
   }
 
-  private static final Preprocessor DEFAULT_PREPROCESSOR =
-      new GccPreprocessor(new HashedFileTool(Paths.get("preprocessor")));
-  private static final Compiler DEFAULT_COMPILER =
-      new GccCompiler(new HashedFileTool(Paths.get("compiler")));
-  private static final Preprocessor PREPROCESSOR_WITH_COLOR_SUPPORT =
-      new PreprocessorWithColorSupport(new HashedFileTool(Paths.get("preprocessor")));
-  private static final Compiler COMPILER_WITH_COLOR_SUPPORT =
-      new CompilerWithColorSupport(new HashedFileTool(Paths.get("compiler")));
   private static final CxxToolFlags DEFAULT_TOOL_FLAGS =
       CxxToolFlags.explicitBuilder()
           .addPlatformFlags(StringArg.of("-fsanitize=address"))
@@ -126,6 +108,25 @@ public class CxxPreprocessAndCompileTest {
             }
           };
 
+  private ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
+
+  private Preprocessor DEFAULT_PREPROCESSOR =
+      new GccPreprocessor(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/preprocessor"))));
+  private Compiler DEFAULT_COMPILER =
+      new GccCompiler(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/compiler"))));
+  private Preprocessor PREPROCESSOR_WITH_COLOR_SUPPORT =
+      new PreprocessorWithColorSupport(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/preprocessor"))));
+  private Compiler COMPILER_WITH_COLOR_SUPPORT =
+      new CompilerWithColorSupport(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/compiler"))));
+
   @Test
   public void inputChangesCauseRuleKeyChangesForCompilation() throws Exception {
     SourcePathRuleFinder ruleFinder =
@@ -134,16 +135,15 @@ public class CxxPreprocessAndCompileTest {
                 TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
     SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     BuildRuleParams params = TestBuildRuleParams.create();
     FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
             ImmutableMap.<String, String>builder()
-                .put("preprocessor", Strings.repeat("a", 40))
-                .put("compiler", Strings.repeat("a", 40))
+                .put("/root/preprocessor", Strings.repeat("a", 40))
+                .put("/root/compiler", Strings.repeat("a", 40))
                 .put("test.o", Strings.repeat("b", 40))
                 .put("test.cpp", Strings.repeat("c", 40))
-                .put("different", Strings.repeat("d", 40))
+                .put("/root/different", Strings.repeat("d", 40))
                 .put("foo/test.h", Strings.repeat("e", 40))
                 .put("path/to/a/plugin.so", Strings.repeat("f", 40))
                 .put("path/to/a/different/plugin.so", Strings.repeat("a0", 40))
@@ -152,7 +152,7 @@ public class CxxPreprocessAndCompileTest {
     // Generate a rule key for the defaults.
 
     RuleKey defaultRuleKey =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -172,7 +172,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the compiler causes a rulekey change.
 
     RuleKey compilerChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -181,7 +181,10 @@ public class CxxPreprocessAndCompileTest {
                     new CompilerDelegate(
                         pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                        new GccCompiler(new HashedFileTool(Paths.get("different"))),
+                        new GccCompiler(
+                            new HashedFileTool(
+                                PathSourcePath.of(
+                                    projectFilesystem, Paths.get("/root/different")))),
                         DEFAULT_TOOL_FLAGS),
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
@@ -193,7 +196,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the operation causes a rulekey change.
 
     RuleKey operationChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
@@ -225,7 +228,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the platform flags causes a rulekey change.
 
     RuleKey platformFlagsChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -249,7 +252,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the rule flags causes a rulekey change.
 
     RuleKey ruleFlagsChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -273,7 +276,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the input causes a rulekey change.
 
     RuleKey inputChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -285,7 +288,7 @@ public class CxxPreprocessAndCompileTest {
                         DEFAULT_COMPILER,
                         DEFAULT_TOOL_FLAGS),
                     DEFAULT_OUTPUT,
-                    FakeSourcePath.of("different"),
+                    FakeSourcePath.of("/root/different"),
                     DEFAULT_INPUT_TYPE,
                     CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                     Optional.empty()));
@@ -301,16 +304,15 @@ public class CxxPreprocessAndCompileTest {
                 TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
     final SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     final BuildRuleParams params = TestBuildRuleParams.create();
     final FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
             ImmutableMap.<String, String>builder()
-                .put("preprocessor", Strings.repeat("a", 40))
-                .put("compiler", Strings.repeat("a", 40))
+                .put("/root/preprocessor", Strings.repeat("a", 40))
+                .put("/root/compiler", Strings.repeat("a", 40))
                 .put("test.o", Strings.repeat("b", 40))
                 .put("test.cpp", Strings.repeat("c", 40))
-                .put("different", Strings.repeat("d", 40))
+                .put("/root/different", Strings.repeat("d", 40))
                 .put("foo/test.h", Strings.repeat("e", 40))
                 .put("path/to/a/plugin.so", Strings.repeat("f", 40))
                 .put("path/to/a/different/plugin.so", Strings.repeat("a0", 40))
@@ -318,7 +320,7 @@ public class CxxPreprocessAndCompileTest {
 
     class TestData {
       public RuleKey generate(PreprocessorFlags flags) throws Exception {
-        return new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        return new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
@@ -351,7 +353,8 @@ public class CxxPreprocessAndCompileTest {
 
     PreprocessorFlags defaultFlags = PreprocessorFlags.builder().build();
     PreprocessorFlags alteredFlags =
-        defaultFlags.withFrameworkPaths(FrameworkPath.ofSourcePath(FakeSourcePath.of("different")));
+        defaultFlags.withFrameworkPaths(
+            FrameworkPath.ofSourcePath(FakeSourcePath.of("/root/different")));
     assertNotEquals(testData.generate(defaultFlags), testData.generate(alteredFlags));
   }
 
@@ -364,7 +367,6 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     BuildRuleParams params = TestBuildRuleParams.create();
     CxxToolFlags flags =
         CxxToolFlags.explicitBuilder()
@@ -393,7 +395,7 @@ public class CxxPreprocessAndCompileTest {
 
     ImmutableList<String> expectedCompileCommand =
         ImmutableList.<String>builder()
-            .add("compiler")
+            .add("/root/compiler")
             .add("-x", "c++")
             .add("-ffunction-sections")
             .add("-O3")
@@ -407,15 +409,11 @@ public class CxxPreprocessAndCompileTest {
   }
 
   @Test
-  public void compilerAndPreprocessorAreAlwaysReturnedFromGetInputsAfterBuildingLocally()
-      throws Exception {
-    ProjectFilesystem filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem();
-    CellPathResolver cellPathResolver = TestCellPathResolver.get(filesystem);
-    SourcePath preprocessor = FakeSourcePath.of(filesystem, "preprocessor");
+  public void compilerAndPreprocessorAreNotCoveredByDepfile() throws Exception {
+    SourcePath preprocessor = FakeSourcePath.of(projectFilesystem, "preprocessor");
     Tool preprocessorTool = new CommandTool.Builder().addInput(preprocessor).build();
 
-    SourcePath compiler = FakeSourcePath.of(filesystem, "compiler");
-    Tool compilerTool = new CommandTool.Builder().addInput(compiler).build();
+    SourcePath compiler = FakeSourcePath.of(projectFilesystem, "compiler");
 
     SourcePathResolver pathResolver =
         DefaultSourcePathResolver.from(
@@ -424,17 +422,16 @@ public class CxxPreprocessAndCompileTest {
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     BuildRuleParams params = TestBuildRuleParams.create();
-    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
 
-    filesystem.writeContentsToPath(
+    projectFilesystem.writeContentsToPath(
         "test.o: " + pathResolver.getRelativePath(DEFAULT_INPUT) + " ",
-        filesystem.getPath("test.o.dep"));
-    PathSourcePath fakeInput = FakeSourcePath.of(filesystem, "test.cpp");
+        projectFilesystem.getPath("test.o.dep"));
+    PathSourcePath fakeInput = FakeSourcePath.of(projectFilesystem, "test.cpp");
 
     CxxPreprocessAndCompile cxxPreprocess =
         CxxPreprocessAndCompile.preprocessAndCompile(
             target,
-            filesystem,
+            projectFilesystem,
             params,
             new PreprocessorDelegate(
                 pathResolver,
@@ -457,27 +454,8 @@ public class CxxPreprocessAndCompileTest {
             Optional.empty(),
             CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
             Optional.empty());
-    assertThat(
-        cxxPreprocess.getInputsAfterBuildingLocally(context, cellPathResolver),
-        hasItem(preprocessor));
-
-    CxxPreprocessAndCompile cxxCompile =
-        CxxPreprocessAndCompile.compile(
-            target,
-            filesystem,
-            params,
-            new CompilerDelegate(
-                pathResolver,
-                CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                new GccCompiler(compilerTool),
-                CxxToolFlags.of()),
-            DEFAULT_OUTPUT,
-            fakeInput,
-            DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
-    assertThat(
-        cxxCompile.getInputsAfterBuildingLocally(context, cellPathResolver), hasItem(compiler));
+    assertFalse(cxxPreprocess.getCoveredByDepFilePredicate(pathResolver).test(preprocessor));
+    assertFalse(cxxPreprocess.getCoveredByDepFilePredicate(pathResolver).test(compiler));
   }
 
   @Test
@@ -488,7 +466,6 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     BuildRuleParams params = TestBuildRuleParams.create();
     Path output = Paths.get("test.o");
     Path input = Paths.get("test.ii");
@@ -534,7 +511,6 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     BuildRuleParams params = TestBuildRuleParams.create();
     Path output = Paths.get("test.ii");
     Path input = Paths.get("test.cpp");
@@ -582,8 +558,8 @@ public class CxxPreprocessAndCompileTest {
 
   @Test
   public void testGetGcnoFile() throws Exception {
-    Path input = Paths.get("foo/bar.m.o");
+    Path input = projectFilesystem.resolve("foo/bar.m.o");
     Path output = CxxPreprocessAndCompile.getGcnoPath(input);
-    assertEquals(Paths.get("foo/bar.m.gcno"), output);
+    assertEquals(projectFilesystem.resolve("foo/bar.m.gcno"), output);
   }
 }
